# Ownership-scanner

./: .gitignore  README.md  pyproject.toml
data/: brands.csv  companies.csv  ownership_groups.csv  ownership_relationships.csv  products.csv  relationship_sources.csv  research_gap_sources.csv  research_gaps.csv  sources.csv
docs/: brand-research-checklist.md  data-model.md  intake-review-2026-07-17.md  manual-research-guide.md  mvp.md
infra/: README.md
infra/bootstrap/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/environments/dev/: .terraform.lock.hcl  api_gateway.tf  backend.tf  budget.tf  iam.tf  lambda.tf  locals.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build_lambda_artifact.py  validate_data.py  verify_lambda_artifact.py
src/ownership_scanner/: __init__.py  api.py  config.py  errors.py  lambda_handler.py  models.py  ownership_service.py  repository.py
tests/: conftest.py  test_api.py  test_lambda.py  test_ownership_service.py  test_repository.py  test_validate_data.py
