[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ownership-scanner"
version = "0.1.0"
description = "Read-only product ownership feasibility API"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.14",
  "mangum==0.21.0",
]

[project.optional-dependencies]
dev = [
  "uvicorn==0.37.0",
]
test = [
  "httpx==0.28.1",
  "pytest==8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
